# netbox-ruckus-r1-sync

./: .gitignore  MANIFEST.in  README.md  README_DE.md  configuration.py.txt  pyproject.toml  setup.py
doc/: documentation.md
ruckus_r1_sync/: __init__.py  admin.py  filters.py  forms.py  jobs.py  mapping.py  models.py  navigation.py  plugin.py  ruckus_api.py  sync.py  tables.py  tasks.py  template_extensions.py  urls.py  views.py
ruckus_r1_sync/api/: __init__.py  serializers.py  urls.py  views.py
ruckus_r1_sync/management/commands/: ruckus_sync.py
ruckus_r1_sync/migrations/: 0001_initial.py  0002_add_custom_field_data.py  0003_add_message_to_synclog.py  0004_rename_client_fields.py  0005_client_venue_network_defaults.py  0006_ruckusr1objectmap.py  0006_sync_toggles.py  0007_add_venue_mapping_fields.py  0008_add_venue_roadmap_fields.py
ruckus_r1_sync/static/ruckus_r1_sync/: dual_list_selector.js
ruckus_r1_sync/static/ruckus_r1_sync/css/: icons.css
ruckus_r1_sync/templates/ruckus_r1_sync/: ruckusr1tenantconfig.html  sync_dashboard.html  sync_logs.html  tenantconfig_view.html
ruckus_r1_sync/templates/ruckus_r1_sync/inc/: config_actions.html  run_button.html
ruckus_r1_sync/templates/ruckus_r1_sync/widgets/: dual_list_selector.html
